<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderingCoffeeActivity" android:background="#BD8573">
    <CheckBox
            android:text="@string/syrup_ingredient"
            android:layout_width="100dp"
            android:layout_height="35dp" android:id="@+id/syrupCB"
            app:layout_constraintTop_toBottomOf="@+id/orderCoffeeImage"
            android:layout_marginTop="68dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="200dp"
            android:layout_marginRight="200dp"
    />
    <CheckBox
            android:text="@string/caramel_ingredient"
            android:layout_width="100dp"
            android:layout_height="35dp" android:id="@+id/caramelCB"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintTop_toBottomOf="@+id/milkCB"
            android:layout_marginTop="44dp"
           />
    <CheckBox
            android:text="@string/whippedCR_ingredient"
            android:layout_width="100dp"
            android:layout_height="50dp" android:id="@+id/whippedCreamCB"
            app:layout_constraintTop_toBottomOf="@+id/creamCB"
            android:layout_marginTop="36dp" app:layout_constraintStart_toEndOf="@+id/caramelCB"
            android:layout_marginLeft="92dp" android:layout_marginStart="92dp"/>
    <CheckBox
            android:text="@string/milk_ingredient"
            android:layout_width="72dp"
            android:layout_height="35dp" android:id="@+id/milkCB"
            app:layout_constraintTop_toBottomOf="@+id/orderCoffeeImage"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
            />
    <ImageView
            android:layout_width="278dp"
            android:layout_height="202dp" app:srcCompat="@drawable/coffee_orders" android:id="@+id/orderCoffeeImage"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="64dp" android:layout_marginEnd="64dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>
    <CheckBox
            android:text="@string/cream_ingredient"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:id="@+id/creamCB"
            app:layout_constraintTop_toBottomOf="@+id/orderCoffeeImage" android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/milkCB" android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp"
    />
    <Spinner
            android:layout_width="212dp"
            android:layout_height="39dp" android:id="@+id/coffeeSizeSpinner"
            app:layout_constraintTop_toBottomOf="@+id/syrupCB" android:layout_marginTop="76dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:clickable="false" android:animationCache="false"
            android:background="#87594B"
            android:entries="@array/coffee_sizes"
            />
    <TextView
            android:text="@string/coffee_subtotal"
            android:layout_width="286dp"
            android:layout_height="52dp" android:id="@+id/coffeeSubtotalText"
            app:layout_constraintTop_toBottomOf="@+id/coffeeSizeSpinner"
            android:layout_marginTop="28dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="36dp" android:layout_marginStart="36dp" android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:background="#817470"/>
    <Button
            android:text="@string/addToOrder_Button"
            android:layout_width="161dp"
            android:layout_height="44dp" android:id="@+id/addCoffeeBtn"
            app:layout_constraintTop_toBottomOf="@+id/coffeeSubtotalText"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="124dp" android:layout_marginStart="124dp" android:background="#8E5748"/>
<!--            android:onClick="addCoffeeOrder"/>-->
    <Spinner
            android:layout_width="93dp"
            android:layout_height="39dp" android:id="@+id/quantityCoffee"
            app:layout_constraintStart_toEndOf="@+id/coffeeSizeSpinner"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/whippedCreamCB" android:layout_marginTop="32dp"
            android:background="#8E5748"/>


</androidx.constraintlayout.widget.ConstraintLayout>