<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MyOrdersActivity">
    <ListView
            android:layout_width="348dp"
            android:layout_height="225dp"
            app:layout_constraintTop_toBottomOf="@+id/cartImage" android:layout_marginTop="12dp"
            android:id="@+id/orderList" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>
    <ImageView
            android:layout_width="155dp"
            android:layout_height="139dp" app:srcCompat="@drawable/my_orders_image" android:id="@+id/cartImage"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="198dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="128dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/my_orders"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#2798CC"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintStart_toEndOf="@+id/cartImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:text="@string/donuts_subtotal"
            android:layout_width="71dp"
            android:layout_height="37dp" android:id="@+id/subtotal"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/orderList"
            android:layout_marginTop="16dp" android:background="#A3A1A1"/>
    <TextView
            android:text="@string/sales_tax"
            android:layout_width="87dp"
            android:layout_height="38dp" android:id="@+id/salesTax"
            app:layout_constraintTop_toBottomOf="@+id/orderList"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp" android:background="#A3A1A1"/>
    <TextView
            android:text="@string/order_total"
            android:layout_width="326dp"
            android:layout_height="40dp" android:id="@+id/totalText"
            app:layout_constraintTop_toBottomOf="@+id/orderList"
            android:layout_marginTop="68dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:background="#A3A1A1"/>
    <Button
            android:text="@string/place_order"
            android:layout_width="217dp"
            android:layout_height="53dp" android:id="@+id/placeOrderBtn"
            app:layout_constraintTop_toBottomOf="@+id/totalText"
            android:layout_marginTop="12dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="96dp" android:layout_marginStart="96dp" android:background="#4330B843"
            android:onClick="placeOrder"
            />
</androidx.constraintlayout.widget.ConstraintLayout>
